Limit github issue report requests to 1/minute
